# the-backdoor-factory

./: .gitignore  BDF_Slides.7z  COPYING  LICENSE.txt  README.md  backdoor.py  elfbin.py  install.sh  machobin.py  payloadtests.py  pebin.py  setup.py  update.sh
.github/: FUNDING.yml
aPLib/: readme.txt
aPLib/contrib/16bit/: deppack.nas  depptiny.nas  history.txt  makeit.bat
aPLib/contrib/AppleII/: apdstsrc.s  apsrcdst.s  readme.txt
aPLib/contrib/PowerBASIC/: aplib.bas  aplib.inc
aPLib/contrib/PowerBuilder/: example.txt  str_filetime.srs  str_netresource.srs  str_ofstruct.srs  str_overlapped.srs  str_security_attibutes.srs  uo_external_function_compression.sru  uo_external_function_winapi.sru
aPLib/contrib/VB6/: maPLib.bas
aPLib/contrib/ada/: aPLibAda.txt  apacdemo.adb  aplib.adb  aplib.ads  gnat.ago  mk_aonix.bat  mk_gndos.bat  mk_gnwin.bat
aPLib/contrib/bcb/: MainFormUnit.cpp  MainFormUnit.dfm  MainFormUnit.h  README_ABOUT_APLIB_DLL.txt  apacksamplec.cpp  apacksamplec.h  aptest.bpr  aptest.cpp  aptest.res
aPLib/contrib/delphi/: aplib.pas  aplibu.pas  aplibud.pas  aptest.dof  aptest.dpr  aptest.res  makefile  t_main.dfm  t_main.pas
aPLib/contrib/dotnet/: appack.cs  mk.bat
aPLib/contrib/dotnet/IbsenSoftware/aPLib/: AssemblyInfo.cs  DllInterface.cs
aPLib/contrib/masm32/: aplib.inc  appack.asm  appack.inc  ctrls.asm  filedlgs.asm  makeit.bat  rsrc.rc  tbmacros.asm  toolbar.asm
aPLib/contrib/python/: aplib.py
aPLib/contrib/tmt/: aplibu.pas  appack.pas  apunpack.pas  makeit.bat
aPLib/contrib/vpascal/: aplib.def  aplibu.pas  aplibud.pas  appack.pas  apunpack.pas  descript.ion  make_exe.cmd  test_exe.cmd  vpc.cfg
aPLib/doc/: aPLib.chm
aPLib/doc/html/: .buildinfo  acknowledgements.html  changes.html  compression.html  decompression.html  general.html  genindex.html  index.html  license.html  objects.inv  search.html  searchindex.js
aPLib/doc/html/_sources/: acknowledgements.txt  changes.txt  compression.txt  decompression.txt  general.txt  index.txt  license.txt
aPLib/doc/html/_static/: grey.css
aPLib/example/: appack.c  make_bcc.bat  make_dll.bat  make_pc.bat  make_vc.bat  make_wat.bat  makefile.cyg  makefile.elf  makefile.macho  makefile.mgw
aPLib/lib/coff/: aplib.h
aPLib/lib/coff64/: aplib.h
aPLib/lib/dll/: aplib.h  aplib.lib
aPLib/lib/dll64/: aplib.h  aplib.lib
aPLib/lib/elf/: aplib.h
aPLib/lib/macho/: aplib.h
aPLib/lib/macho64/: aplib.h
aPLib/lib/omf/: aplib.h  aplib.lib
aPLib/src/: depack.c  depack.h  depacks.c  depacks.h
aPLib/src/32bit/: crc32.asm  depack.asm  depackf.asm  depacks.asm  scheck.asm  sdepack.asm  sgetsize.asm  spack.asm
aPLib/src/64bit/: crc32.asm  depack.asm  depackf.asm  depacks.asm  scheck.asm  sdepack.asm  sgetsize.asm  spack.asm
arm/: LinuxARMLELF32.py
asm/src/: loadliba_reverse_tcp.asm  loadliba_shell.asm  loadliba_single_shell_reverse_tcp.asm
intel/: FreeBSDIntelELF32.py  LinuxIntelELF32.py  LinuxIntelELF64.py  MachoIntel32.py  MachoIntel64.py  WinIntelPE32.py  WinIntelPE64.py  intelCore.py  intelmodules.py
onionduke/: onionduke.py
osslsigncode/: .gitignore  ChangeLog  LICENSE  Makefile.am  README  README.unauthblob  TODO  configure.ac  osslsigncode.c
osslsigncode/misc/: pagehash.py  valgrind.supp
osslsigncode/misc/softhsm-example-token/: .gitignore  README  gen-token.sh
osslsigncode/tests/: testsign.sh
preprocessor/: debug.py  nsis_3_0.py  template.py
winapi/: winapi.py
